<resources>
    <string name="app_name" translatable="false">NAVIVELO</string>
    <string name="register">Zarejestruj się</string>
    <string name="no_account">Nie masz jeszcze konta?</string>
    <string name="login">Zaloguj się</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="user_name">Login</string>
    <string name="email">E-mail</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="login_correct">Zalogowano pomyślnie</string>
    <string name="login_incorrect">Błędny login lub hasło</string>
    <string name="title_activity_select_route" translatable="false">SelectRoute</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBLakV6ROC_KvezA9-nF9uMtpmmP0JFfDI</string>
    <string name="passwords_not_equal">Podane hasła nie są identyczne</string>
    <string name="registration_ok">Pomyślnie zarejestrowano</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="radio_button_fast">Trasa najszybsza</string>
    <string name="radio_button_safe">Trasa bezpieczna</string>
    <string name="radio_button_touristic">Trasa turystyczna</string>
    <string name="navi_settings_button">Ustawienia nawigacji</string>
    <string name="start">Podaj punkt początkowy</string>
    <string name="end">Podaj punkt końcowy</string>
    <string name="search">Wyszukaj trasę</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
