<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tryhu.navivelo.SelectRouteFragment">

    <AutoCompleteTextView
        android:id="@+id/startPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="18dp"
        android:text="@string/start" />

    <AutoCompleteTextView
        android:id="@+id/endPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:text="@string/end" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:text="@string/search"
        android:theme="@style/SimpleButton" />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioButton
        android:id="@+id/radioButtonFast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/radio_button_fast" />

    <RadioButton
        android:id="@+id/radioButtonSafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="80dp"
        android:text="@string/radio_button_safe" />

    <RadioButton
        android:id="@+id/radioButtonTouristic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/radio_button_touristic" />



</RadioGroup>

    <Button
        android:id="@+id/naviSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/navi_settings_button"
        android:theme="@style/SimpleButton"
        />

    <org.osmdroid.views.MapView
        android:id="@+id/simplyMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </org.osmdroid.views.MapView>

</FrameLayout>
