<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tryhu.navivelo.SelectRouteActivity">

    <AutoCompleteTextView
        android:id="@+id/startPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/start" />

    <AutoCompleteTextView
        android:id="@+id/endPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startPlace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/end" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/endPlace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        android:theme="@style/SimpleButton" />

    <RadioButton
        android:id="@+id/radioButtonFast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/radioButtonSafe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/radio_button_fast" />

    <RadioButton
        android:id="@+id/radioButtonSafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/radioButtonTouristic"
        android:layout_alignTop="@+id/radioButtonFast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/radio_button_safe" />

    <RadioButton
        android:id="@+id/radioButtonTouristic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/radioButtonSafe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/radio_button_touristic" />

    <Button
        android:id="@+id/naviSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radioButtonTouristic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/navi_settings_button"
        android:theme="@style/SimpleButton" />


    <org.osmdroid.views.MapView
        android:id="@+id/simplyMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </org.osmdroid.views.MapView>


</RelativeLayout>